--- a/landing.html
+++ b/landing.html
@@ -16,7 +16,7 @@
         <a class="col-lg-2 navbar-brand">
         <div class = 'page-title'>AirbnbCar</div></a>
         <form class="form-inline">
-            <button class="btn btn-info my-2 my-sm-0" type="button" id="searchClicked">Login</button>
+            <button class="btn btn-info my-2 my-sm-0" type="button" id = "new-button">Login</button>
         </form>
     </nav>
 
@@ -29,15 +29,55 @@
 
     <!-- Optional: some overlay text to describe the video -->
     <div class="content">
-    <h1>Introducing Airbnb Car</h1>
-    <p>Rent a car near you within minutes, please we need to change this</p>
-    <button class="button button4">Learn more</button>
+      <h1>Introducing Airbnb Car</h1>
+      <p>Rent a car near you within minutes, please we need to change this</p>
+      <a href="#About" class="btn btn-info" role="button" id = "new-button">Learn More</a>
     </div>
 
     <div class = "content2">
     </div>
 
-    <img src="./images/tesla.jpg" alt="">
+    <section id="About">
+      <div class = "content3">
+        <h1>About Airbnb Car</h1>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <a href= "#AboutUs" class="btn btn-info" role="button" id = "new-button">About Us</a>
+      </div>
+    </section>
+
+
+    <section id="AboutUs">
+      <div class = "content4">
+        <h1>About Us</h1>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+      
+
+      <div class="profile-container container center">
+        <div class="row">
+          <section class="profile col-sm-3">
+            <img src="./images/Veeral.jpg" class="mx-auto img-rounded pic" />
+              <h3>Angela Li</h3>
+              <h4>3rd Year CS Major</h4>
+          </section>
+
+          <section class="profile col-sm-3">
+            <img src="./images/Veeral.jpg" class="mx-auto img-rounded pic" />
+              <h3>Steve Ng</h3>
+              <h4>4th Year CS Major</h4>
+          </section>
+
+          <section class="profile col-sm-3">
+            <img src="./images/Veeral.jpg" class="mx-auto img-rounded pic" />
+              <h3>Veeral Bhagat</h3>
+              <h4>3rd Year CS Major</h4>
+            </section>
+        </div>
+      </div>
+    </section>
+    </div>
+
+    <div class = "content5">
+    </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
