User Account Create

--- a/landing.html
+++ b/landing.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar fixed-top navbar-light bg-light justify-content-between">
         <a class="col-lg-2 navbar-brand">
-        <div class = 'page-title'>AirbnbCar</div></a>
+        <div class = 'page-title'>InstaCar</div></a>
         <form class="form-inline">
             <button class="btn btn-info my-2 my-sm-0" type="button" id = "new-button">Login</button>
         </form>
@@ -29,8 +29,8 @@
 
     <!-- Optional: some overlay text to describe the video -->
     <div class="content">
-      <h1>Introducing Airbnb Car</h1>
-      <p>Rent a car near you within minutes, please we need to change this</p>
+      <h1>Introducing InstaCar</h1>
+      <p>Instantly rent a smart car near you for quick trips or new destinations</p>
       <a href="#About" class="btn btn-info" role="button" id = "new-button">Learn More</a>
     </div>
 
@@ -39,8 +39,8 @@
 
     <section id="About">
       <div class = "content3">
-        <h1>About Airbnb Car</h1>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <h1>About InstaCar</h1>
+        <p>InstaCar is the car renting service of the future, which differs from current renting services currently on the market. Car owners and renters no longer need to set up a meeting in order to exchange information and vehicles. Instead, car owners can just register their vehicle on our app and leave it wherever for local renters to pick up. Renters can search available cars to rent nearby and immediately start driving within minutes.</p>
         <a href= "#AboutUs" class="btn btn-info" role="button" id = "new-button">About Us</a>
       </div>
     </section>
@@ -49,7 +49,7 @@
     <section id="AboutUs">
       <div class = "content4">
         <h1>About Us</h1>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+        <p>Our team is composed of three undergraduate students at University of California, Irvine majoring in Computer Science.</p>
       
 
       <div class="profile-container container center">
