--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="col-lg-2 navbar-brand">
         <div class = 'page-title'>InstaCar</div></a>
         <form class="form-inline">
-            <button class="btn btn-info my-2 my-sm-0" type="button" id = "new-button">Login</button>
+            <a href="./login.html" class="btn btn-info" role="button" id = "new-button">Login / Sign Up</a>
         </form>
     </nav>
 
