functionality avail cars

--- a/dashboard.html
+++ b/dashboard.html
@@ -23,10 +23,15 @@
 <div id="map"></div>
     </div>
 
+
+
 </hr>
 
 <div class="row">
 
+  <div class="col-md-102 col-sm-12">
+
+</div>
 </div>
   
 </div>
