--- a/landing.html
+++ b/landing.html
@@ -49,7 +49,7 @@
     <section id="AboutUs">
       <div class = "content4">
         <h1>About Us</h1>
-        <p>Our team is composed of three undergraduate students at University of California, Irvine majoring in Computer Science. For InstaCar we used programs such as smartcar API, Firebase, Flask, HTML, CSS, as well as Javascript to help bring it to life. </p>
+        <p>Our team is composed of three undergraduate students at University of California, Irvine majoring in Computer Science. For InstaCar, we used programs such as smartcar API, Firebase, Flask, HTML, CSS, as well as Javascript to help bring it to life.</p>
       
 
       <div class="profile-container container center">
