--- a/become-an-owner/owner.html
+++ b/become-an-owner/owner.html
@@ -75,6 +75,9 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="../javascript/owner.js"></script>
+  <script async defer
+src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNKVIdfkKCzVaBDQshoe6FMVyUbqu41TE&callback=initMap">
+</script>
 
   </body>
 </html>
