--- a/dashboard.html
+++ b/dashboard.html
@@ -6,33 +6,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+ 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
     <link rel="stylesheet" href="./css/dashboard.css">
 
   <title>Dashboard</title>
 </head>
 
-<body>
-  <div class="container">
+    <nav class="navbar fixed-top navbar-light justify-content-between">
+        <a class="col-lg-2 navbar-brand">
+        <div class = 'page-title'>InstaCar</div></a>
+        <form class="form-inline">
+            <a href="./dashboard.html" class="btn btn-info" role="button" id = "new-button">Renter</a>
+            <a href="./become-an-owner/owner.html" class="btn btn-info" role="button" id = "new-button">Owner</a>
+        </form>
+    </nav>
 
-    <h1 id="carsNear">Cars Near You</h1>
-    <div class="row">
-<div id="map"></div>
+<body>
+
+<div class = "content">
+    <h1 id="carsNear">Rent a Car</h1> 
+    <p>Find a smart car available for renting near your location</p>
+</div>
+
+<div style = 'text-align:center;height:100%;'>
+  <div id = 'map_container' class="container">
+    <div id="map" style = 'width:100%;height:50%;'></div>
+  </div>
+
+<div class = "content3">
+      <p>View available cars to rent</p>
+    </div>
+
+    <div class="content3">
+    <a data-scroll href="#row">
+      <div class="arrow"></div>
+    </a>
+  </div>
+  <div id="full"></div>
+
+    <div class = "content2">
+      <hr/>
     </div>
 
 
+  </hr>
 
-</hr>
+  <div class="row">
 
-<div class="row">
-
-  <div class="col-md-102 col-sm-12">
-
-</div>
-</div>
+  </div>
   
 </div>
 
@@ -47,6 +70,7 @@
 <script async defer
 src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNKVIdfkKCzVaBDQshoe6FMVyUbqu41TE&callback=initMap">
 </script>
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
 
      
