--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
     </div>
 
     <div class="content3">
-    <a data-scroll href="#row">
+    <a data-scroll href="#full">
       <div class="arrow"></div>
     </a>
   </div>
