--- a/become-an-owner/owner.html
+++ b/become-an-owner/owner.html
@@ -16,7 +16,7 @@
         <a class="col-lg-2 navbar-brand">
         <div class = 'page-title'>InstaCar</div></a>
         <form class="form-inline">
-            <a href="./renter.html" class="btn btn-info" role="button" id = "new-button">Renter</a>
+            <a href="../dashboard.html" class="btn btn-info" role="button" id = "new-button">Renter</a>
             <a href="./owner.html" class="btn btn-info" role="button" id = "new-button">Owner</a>
         </form>
     </nav>
