--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="About">
       <div class = "content3">
         <h1>About InstaCar</h1>
-        <p>InstaCar is the car renting service of the future, which differs from current renting services currently on the market. Car owners and renters no longer need to set up a meeting in order to exchange information and vehicles. Instead, car owners can just register their vehicle on our app and leave it wherever for local renters to pick up. Renters can search available cars to rent nearby and immediately start driving within minutes.</p>
+        <p>InstaCar is the decentralized car renting service of the future, which differs from current renting services currently on the market. Car owners and renters no longer need to set up a meeting in order to exchange information and vehicles. Instead, car owners can just register their vehicle on our app and leave it wherever for local renters to pick up. Renters can search available cars to rent nearby and immediately start driving within minutes.</p>
         <a href= "#AboutUs" class="btn btn-info" role="button" id = "new-button">About Us</a>
       </div>
     </section>
@@ -49,7 +49,7 @@
     <section id="AboutUs">
       <div class = "content4">
         <h1>About Us</h1>
-        <p>Our team is composed of three undergraduate students at University of California, Irvine majoring in Computer Science. For InstaCar we used programs such as smartcar API, Firebase, Flask, HTML, CSS, as well as Javascript to help bring it to life. </p>
+        <p>Our team is composed of three undergraduate students at University of California, Irvine majoring in Computer Science. For InstaCar we used programs such as smartcar API, AWS, Firebase, Flask, HTML, CSS, and Javascript to help bring it to life. </p>
       
 
       <div class="profile-container container center">
