--- a/dashboard.html
+++ b/dashboard.html
@@ -15,9 +15,10 @@
 </head>
 
     <nav class="navbar fixed-top navbar-light justify-content-between">
+      <div class = 'title-cont'>
         <a class="col-lg-2 navbar-brand">
-        <div class = 'page-title'>InstaCar</div></a>
-        <form class="form-inline">
+        <div class = 'page-title'>InstaCar</div></a></div>
+        <form class="form-inline form-cont">
             <a href="./dashboard.html" class="btn btn-info" role="button" id = "new-button">Renter</a>
             <a href="./become-an-owner/owner.html" class="btn btn-info" role="button" id = "new-button">Owner</a>
         </form>
