--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
     <link rel="stylesheet" href="./css/landing.css">
   </head>
 
-  <nav class="navbar fixed-top navbar-light bg-light justify-content-between">
+  <nav class="navbar fixed-top navbar-light justify-content-between">
+      <div class = 'title-cont'>
         <a class="col-lg-2 navbar-brand">
-        <div class = 'page-title'>InstaCar</div></a>
-        <form class="form-inline">
-            <a href="./login.html" class="btn btn-info" role="button" id = "new-button">Login / Sign Up</a>
+        <div class = 'page-title'>InstaCar</div></a></div>
+        <form class="form-inline form-cont">
+            <a href="./dashboard.html" class="btn btn-info" role="button" id = "new-button">Renter</a>
+            <a href="./become-an-owner/owner.html" class="btn btn-info" role="button" id = "new-button">Owner</a>
         </form>
     </nav>
-
   <body>
     <!-- The video -->
 
@@ -85,4 +86,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </body>
+  <script>
+    $(function () {
+  $(document).scroll(function () {
+    var $nav = $(".navbar");
+    var $title = $(".page-title");
+    $nav.toggleClass('scrolled', $(this).scrollTop() > $nav.height());
+    $title.toggleClass('scrolled2', $(this).scrollTop() > $nav.height());
+  });
+});
+  </script>
 </html>
