--- a/become-an-owner/owner.html
+++ b/become-an-owner/owner.html
@@ -27,7 +27,7 @@
     <div class="content">
     		<h1>Register a Vehicle</h1>
     		<p>Register your vehicle's information to start renting services</p>
-      		<a href="#Registered" class="btn btn-info" role="button" id = "new-button2">Register</a>
+      		<a href="" class="btn btn-info" role="button" id = "new-button2">Register</a>
 
     </div>
 
@@ -76,9 +76,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="../javascript/owner.js"></script>
-  <script async defer
-src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDNKVIdfkKCzVaBDQshoe6FMVyUbqu41TE&callback=initMap">
-</script>
+ 
 
   </body>
 </html>
