--- a/become-an-owner/owner.html
+++ b/become-an-owner/owner.html
@@ -27,7 +27,7 @@
     <div class="content">
     		<h1>Register a Vehicle</h1>
     		<p>Register your vehicle's information to start renting services</p>
-      		<a href="" class="btn btn-info" role="button" id = "new-button2">Register</a>
+      		<a class="btn btn-info" role="button" id = "new-button2">Register</a>
 
     </div>
 
