--- a/dashboard.html
+++ b/dashboard.html
@@ -58,6 +58,15 @@
 
   </div>
   
+
+  
+  
+<div style = 'margin-top:100px;'><a  href = '/client-dashboard.html' ><div >
+    View currently rented vehicles
+  </a></div>
+  
+  <div style = 'height:50px;'>
+  </div>
 </div>
 
 
