--- a/client-dashboard.html
+++ b/client-dashboard.html
@@ -18,7 +18,7 @@
 
    <nav class="navbar fixed-top navbar-light justify-content-between">
       <div class = 'title-cont'>
-        <a class="col-lg-2 navbar-brand">
+        <a  href="index.html" class="col-lg-2 navbar-brand">
         <div class = 'page-title'>InstaCar</div></a></div>
         <form class="form-inline form-cont">
             <a href="./dashboard.html" class="btn btn-info" role="button" id = "new-button">Renter</a>
