--- a/landing.html
+++ b/landing.html
@@ -13,7 +13,7 @@
   </head>
 
   <nav class="navbar fixed-top navbar-light bg-light justify-content-between">
-        <a class="col-lg-2 navbar-brand">
+        <a href="index.html" class="col-lg-2 navbar-brand">
         <div class = 'page-title'>InstaCar</div></a>
         <form class="form-inline">
             <a href="./login.html" class="btn btn-info" role="button" id = "new-button">Login / Sign Up</a>
