--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <a href="index.html" class="col-lg-2 navbar-brand">
         <div class = 'page-title'>InstaCar</div></a></div>
         <form class="form-inline form-cont">
-            <a href="./dashboard.html" class="btn btn-info" role="button" id = "new-button">Renter</a>
-            <a href="./become-an-owner/owner.html" class="btn btn-info" role="button" id = "new-button">Owner</a>
+            <a href="./login.html" class="btn btn-info" role="button" id = "new-button">Log In / Sign Up</a>
+            
         </form>
     </nav>
   <body>
