--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
       <div class="profile-container container center">
         <div class="row">
           <section class="profile col-sm-3">
-            <img src="./images/Veeral.jpg" class="mx-auto img-rounded pic" />
+            <img src="./images/Angela.jpg" class="mx-auto img-rounded pic" />
               <h3>Angela Li</h3>
               <h4>3rd Year CS Major</h4>
           </section>
 
           <section class="profile col-sm-3">
-            <img src="./images/Veeral.jpg" class="mx-auto img-rounded pic" />
+            <img src="./images/Steve.jpg" class="mx-auto img-rounded pic" />
               <h3>Steve Ng</h3>
               <h4>4th Year CS Major</h4>
           </section>
